Custom config implementation

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,6 @@ cop:
   service_name: transac-parser-svc
   service_port: 80
 
-parser:
+custom:
   infura_api_key: very_secret_key
   contract_address: "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48" #USDC contract by default
